[package]
name = "rocket1u-exp"
version = "0.1.0"
authors = ["nuts-n-bits <nuts-n-bits@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde_json = "1.0"
rouille = "3.1.1"
percent-encoding = "2.1.0"
urlencoding = "1.3.3"
